Update in the index.html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Hello World !!!</h1>
         <p>I'm hosted my website with GitHub</p>
+        <p>                  By Alex Padilla</p>
     </body>
 </html>
